10/11/25:

- Lift useEffect API fetch to App
- Lift handleQuantityChange, handleIncrement, handleDecrement, handleManualChange, and addCart to App
- Fix inputting item quantity and navigating to different page resetting selected amount in Shop
- Fix typing letters into quantity input displaying NaN
- Fix clearing out quantity input displaying NaN
- Update increment/decrement buttons in Shop to remove items at 0 quantity from cart
- Remove add to cart button
- Change increment/decrement buttons in Shop to automatically adjust cart
- Fix Cart(#) not displaying total amount of items

10/10/25:

- Update Cart and Items to share layout style
- Update Cart to display added items and quantities
- Update addCart to push additional information to array
- Move displaying Navigation to only be in App
- Create addCart to handle pushing item quantities to cart amount display

10/9/25:

- Map API items to cards
- Set up Items with API call
- Set home to default page
- Implement basic nav bar
- Install and set up basic router
- Basic component folders and files set up

10/6/25:

- General set up
- Reduce gif file size